@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model - US27 List all Green Spaces

class Collaborator {
    name
    dateOfBirth
    admissionDate
    phoneNumber
    taxpayer
    email
}

class GreenSpaceManager {
}

class GreenSpace{
    name
    area
}

class SortingAlgorithm {
}

class Garden {
}

class MediumPark {
}

class LargePark {
}

Collaborator  <|--  GreenSpaceManager

GreenSpaceManager "1" -- "1..*" GreenSpace : manages >

GreenSpace "*" -- "1" SortingAlgorithm : makes use of >
GreenSpace <|-- Garden
GreenSpace <|-- MediumPark
GreenSpace <|-- LargePark

@enduml